--- a/extra.html
+++ b/extra.html
@@ -19,14 +19,14 @@
         </div>
 
         <div id="logo0">
-            <a href="Tienda_friki.html"><img src="imagenes/reaki.png" alt="mudkip" id="reaki"></a>
+            <a href="index.html"><img src="imagenes/reaki.png" alt="mudkip" id="reaki"></a>
             
         </div>
 
        
         <nav id="navbar">
             <ul>
-                <li><a href="Tienda_friki.html">Inicio</a></li>
+                <li><a href="index.html">Inicio</a></li>
                 <li><a href="productos.html">Productos</a></li>
                 <li><a href="carrito.html">Mi Carrito</a></li>
 
@@ -57,7 +57,7 @@
         <div id="lista1">
             <ul id="contactos">
                 <li><h3>NUESTRAS REDES Y CONTACTOS</h3></li>
-                <li>correo electronico:</li>
+                <li>correo electrónico:</li>
                 <li>reaki_friki@gmail.com</li>
                 <li><a href="https://www.facebook.com/" target="_blank"><img src="imagenes/book.png" alt="facebook" class="red"></a></li>
                 <li><a href="https://www.instagram.com/" target="_blank"><img src="imagenes/ins.png" alt="instagram" class="red"></a></li>
